<resources>
    <string name="app_name">Православный календарь</string>

    <!--ornament for ornament font-->
    <string name="ornament_for_headers_left">A</string>
    <string name="ornament_for_headers_right">a</string>
    <string name="ornament_for_name_date_left">v</string>
    <string name="ornament_for_name_date_right">V</string>

    <!--name icon_tile for toolbar -->
    <string name="item_name_about">о сем творении</string>
    <string name="item_name_settings">настройки</string>
    <string name="item_view_settings">смена вида</string>
    <string name="toolbar_header">&lt; %1$d &gt;</string>
    <string name="toolbar_header_arrow_right">    %1$d &gt;</string>
    <string name="toolbar_header_arrow_left">&lt; %1$d     </string>

    <string name="new_style_date_string">по новому стилю %1$s</string>
    <string name="old_style_date_string">по старому стилю %1$s</string>

    <!--Settings-->
    <string name="check_box_sett_typycon_icon">показывать знаки типикона</string>
    <string name="check_box_allow_average_holidays">показывать средние праздники</string>
    <string name="text_view_sett_time_notification">напоминать о праздниках за:</string>
    <string name="text_view_sett_time_notification_all">напоминать о праздниках</string>
    <string name="text_view_hours">дн.</string>
    <string name="edit_text_time_notification">24</string>
    <string name="check_box_allow_image_grayscale">черно-белые изображения</string>

    <!--Tipicon image code-->
    <string name="main_holiday">*</string>
    <string name="head_holiday">^</string>
    <string name="twelve_movable_holiday">^</string>
    <string name="twelve_not_movable_holiday">^</string>
    <string name="average">^</string>
    <string name="average_polyleic_holiday">$</string>
    <string name="average_peppy_holiday">%</string>
    <string name="memorial_day">‡</string>
    <string name="birthday">{</string>
    <string name="name_day">}</string>

    <!--notification text-->
    <string name="notif_holiday_today">Сегодня праздник </string>
    <string name="notif_holiday_tomorrow">Завтра отмечают праздник </string>
    <string name="notif_holiday_later"> отмечают праздник </string>
    <string name="text_view_about_app_email">ggn.master@gmail.com</string>

    <string name="arrow_left">&lt;</string>
    <string name="arrow_right">&gt;</string>

    <string-array name="loading_strings_array">
        <item>\"Покайтесь,\n ибо приблизилось \n Царство Небесное.\" \n (Мф. 4:17)</item>
        <item>\"Воззови ко Мне - и Я отвечу тебе, \n покажу тебе великое и недоступное, \n чего ты не знаешь.\" \n (Иер.33:3)</item>
        <item>\"Утешайся Господом,\n и Он  исполнит желание \n сердца твоего.\" \n (Пс.37:4)</item>
        <item>\"Ищите же прежде \n Царства Божия\n и правды Его,\n и это все\n приложится вам.\" \n (Мф. 6:33)</item>
        <item>\"..какой мерой отмерите,\n такой же\n отмерится и вам.\" \n (Лк.6:38)</item>
        <item>\"Просите и воздастся вам,\n ищите и найдёте.\"\n (Мф.7:7)</item>
        <item>\"Блаженны, изгнанные\n за правду,\n ибо их есть\n  Царство Небесное.\"\n (Мф.5:10)</item>
        <item>\"Много званых,\n  но мало избранных.\"\n (Лк.14:24)</item>
        <item>\"Терпением вашим\n спасайте души ваши.\"\n (Лк.21:19)</item>
        <item>\"Блаженны чистые сердцем,\n ибо они Бога узрят.\"\n (Лк.21:19)</item>
    </string-array>

    <!--icon_tile menu text-->
    <string name="text_view_about_app" formatted="true">Это приложение было выполнено с целью
        бесплатного использования и для прославления Господа нашего Иисуса Христа.
    Все вопросы, жалобы и предложения можете присылать на почту указанную ниже.
    \n \n Слава Господу нашему Иисусу Христу всегда и ныне и присно и во веки веков. Аминь.
    </string>
    <string name="info_substring_lord_name_1">Христ</string>
    <string name="info_substring_lord_name_2">Иисус</string>


    <string name="num_example_1">1</string>
    <string name="num_example_2">2</string>
    <string name="num_example_3">3</string>
    <string name="num_example_4">4</string>
    <string name="num_example_5">5</string>

    <string name="сonvention">Условные обозначения</string>
    <string name="great_holidays_name">Великие праздники</string>
    <string name="great_easter_name">Пасха</string>
    <string name="great_twelve_name">Двунадесятые праздники</string>
    <string name="fasting_day">Постный день</string>
    <string name="fish_allow">Разрешение на рыбу</string>
    <string name="oil_allow">Разрешение на растительное масло</string>
    <string name="vine_allow">Разрешение на вино</string>
    <string name="eggs_allow">Трапеза без мяса</string>
    <string name="remember_day">Особые дни памяти</string>
    <string name="strict_fasting">Строгий пост</string>
    <string name="no_fasting_days">Сплошная седьмица</string>
    <string name="have_holidays">Есть праздники</string>

    <!--Settings subtypes-->
    <string name="settings_notifications_header">Уведомления</string>
    <string name="settings_interface_header">Интерфейс</string>

    <!--Settings-->
    <string name="settings_name">Настройки</string>
    <string name="settings_notifications">Уведомлять о праздниках в текущий день</string>
    <string name="settings_average_notifications">Уведомлять о средних праздниках</string>
    <string name="settings_name_days_notifications">Уведомлять о именинах</string>
    <string name="settings_birthdays_notifications">Уведомлять о днях рождения</string>
    <string name="settings_memory_days_notifications">Уведомлять о днях памяти</string>
    <string name="settings_notifications_sound">Уведомления со звуком</string>
    <string name="settings_notifications_sound_default">Стандартный звук в уведомлениях</string>
    <string name="settings_notifications_vibration">Уведомления с вибрацией</string>
    <string name="settings_notifications_time">Уведомлять заранее за</string>
    <string name="settings_notifications_in_time">Время для уведомлений</string>
    <string name="settings_first_load_view">Первым загружать плиточный календарь</string>
    <string name="settings_speed_up_start_anim">Ускорить стартовую анимацию</string>
    <string name="settings_off_start_anim">Отключить стартовую анимацию</string>
    <string name="settings_days">дн.</string>
    <string name="settings_hours">ч.</string>

    <string-array name="spinner_days_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="user_holidays_names">
        <!-- @see Holiday.Type ids -->
        <item id="8">День памяти</item>
        <item id="9">Именины</item>
        <item id="10">День рождения</item>
    </string-array>

    <!--Notifications-->
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="after_days">Через %1$d дн.</string>
    <string name="holiday_title">праздник</string>
    <string name="name_title">именины</string>
    <string name="birthday_title">день рождения</string>
    <string name="memory_day_title">день памяти</string>

    <!-- IMG descriptors -->
    <string name="descriptor_img_load_holidays">Загрузка</string>
    <string name="fab_content_desc">Фильтр</string>


    <string name="filters_name">Фильтры</string>
    <string name="filter_easter">Пасха</string>
    <string name="filter_head_holidays">Великие праздники</string>
    <string name="filter_average_holidays">Средние праздники</string>
    <string name="filter_common_memory_days">Дни особого поминовения</string>
    <string name="filter_memory_days">Дни памяти</string>
    <string name="filter_name_days">Именины</string>
    <string name="filter_birthdays">Дни рождения</string>

    <!-- New holiday -->
    <string name="add_holiday">Новое событие</string>
    <string name="name_holiday_title">Название</string>
    <string name="new_name_holiday">Новый</string>
    <string name="month_title">Месяц</string>
    <string name="day_title">День</string>
    <string name="year_title">Указать год</string>
    <string name="year_title_2">Год</string>
    <string name="type_holiday">Тип</string>
    <string name="description_holiday">Описание</string>
    <string name="save_holiday">Сохранить</string>
    <string name="age_title">полных лет</string>
    <string name="year_title_short">г.</string>

    <!-- Fastings -->
    <string name="no_fasting">Поста нет</string>
    <string name="peter_and_paul_fasting">Петров пост</string>
    <string name="assumption_fasting">Успенский пост</string>
    <string name="christmas_fasting">Рождественский пост</string>
    <string name="great_fasting">Великий пост</string>
    <string name="solid_week">Сплошная неделя</string>
    <string name="epiphany_eve">Крещенский сочельник</string>

    <string name="no_holidays">Нет событий</string>
    <string name="no_description">Описание отсутствует</string>

</resources>
