<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="end">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/activityCalendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/toolbar_background"
                android:elevation="3dp"
                android:minHeight="?attr/actionBarSize">

                <com.artmaster.android.orthodoxcalendar.data.font.TextViewWithCustomFont
                    android:id="@+id/arrowLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/arrow_left"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:customFont="@string/font_basic" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/toolbarYearSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:customFont="@string/font_basic" />

                <com.artmaster.android.orthodoxcalendar.data.font.TextViewWithCustomFont
                    android:id="@+id/arrowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_arrow_drop_down_white"
                    android:gravity="center"
                    android:text="@string/arrow_right"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:customFont="@string/font_basic" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/menu_fragments_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--    <com.google.android.material.navigation.NavigationView
                android:id="@+id/filters_navigation_panel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:fitsSystemWindows="true"
                app:behavior_hideable="true"
                app:elevation="@dimen/activity_horizontal_margin"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                app:menu="@menu/filters_navigation_drawer" />-->


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/filters_navigation_panel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@android:color/white"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:menu="@menu/filters_navigation_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:backgroundTint="@color/colorHeadHoliday"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_filter_alt_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


